syntax = "proto3";

option java_multiple_files = true;
option java_package = "pathfinder.data";

message ClassDatabase {
  repeated ClassData classes = 1;
}

message ClassData {
  string id = 1;
  string name = 2;
  repeated Level levels = 3;

  message Level {
    uint32 level_number = 1;
    uint32 bab = 2;
    uint32 fort_save = 3;
    uint32 ref_save = 4;
    uint32 will_save = 5;
    repeated string special = 6;
  }
}

